--- a/IA_Consultas.ipynb
+++ b/IA_Consultas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJwhjEpN3xtnvBT1FRRSeo",
+      "authorship_tag": "ABX9TyPTb3qs5dbMm/oY3P3YWCQO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,8 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# IA para consultas\n",
-        "Autor: Eginhardo Navarro Honda"
+        "$\\large\\textit{IA para Consultas de Publicaciones}$\n",
+        "\n",
+        "$\\small\\text{Autor: Eginhardo Navarro Honda}$"
       ],
       "metadata": {
         "id": "k9WQL7fYfd-3"
