Se creó con Colab

--- a/Pregunta2_Consultas_en_SCOPUS_API.ipynb
+++ b/Pregunta2_Consultas_en_SCOPUS_API.ipynb
@@ -13,20 +13,333 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Autor: Eginhardo Navarro Honda"
+        "$\\large\\textit{Consultas en SCOPUS}$\n",
+        "\n",
+        "$\\small\\text{Autor: Eginhardo Navarro Honda}$"
       ],
       "metadata": {
         "id": "ZXM5LuB1muHw"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "`$\\large\\textit{1. Instalando la librería 'pybliometrics'}$"
+      ],
+      "metadata": {
+        "id": "x8ZA3ZT2kU1d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pybliometrics"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "roMN8ndJkCEd",
+        "outputId": "294e9ceb-5e93-4c10-f0f3-34abf6cd64ad"
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pybliometrics in /usr/local/lib/python3.10/dist-packages (4.1)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from pybliometrics) (2.32.3)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from pybliometrics) (4.66.5)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.10/dist-packages (from pybliometrics) (2.0.7)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->pybliometrics) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->pybliometrics) (3.8)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->pybliometrics) (2024.8.30)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\large\\textit{2. Importando las librerías necesarias}$"
+      ],
+      "metadata": {
+        "id": "bcajmsdMkoId"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pybliometrics.scopus import ScopusSearch"
+      ],
+      "metadata": {
+        "id": "QDlug2YHpGPU"
+      },
+      "execution_count": 128,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*2.1. Creando el Archivo de Configuración Sin Parámetros*"
+      ],
+      "metadata": {
+        "id": "vyzW-79Z4ENt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pybliometrics.scopus.utils import create_config"
+      ],
+      "metadata": {
+        "id": "4AqiS53Ny29q"
+      },
+      "execution_count": 129,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*2.2. Creando el archivo de configuración*\n",
+        "\n",
+        "*API Key = 'bab8e983f0fd5bdd813ac1c6910111b7'"
+      ],
+      "metadata": {
+        "id": "9c74N6ik4R7W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Ejecutando 'create_config()'\n",
+        "create_config()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7KC5Pi3o4pAG",
+        "outputId": "65597cc3-f647-47da-ac7a-6eaa4ff9340d"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Creating config file at /root/.config/pybliometrics.cfg with default paths...\n",
+            "Please enter your API Key(s), obtained from http://dev.elsevier.com/myapikey.html.  Separate multiple keys by comma:\n",
+            "bab8e983f0fd5bdd813ac1c6910111b7\n",
+            "API Keys are sufficient for most users.  If you have an InstToken, please enter the token now; otherwise just press Enter:\n",
+            "\n",
+            "Configuration file successfully created at /root/.config/pybliometrics.cfg\n",
+            "For details see https://pybliometrics.rtfd.io/en/stable/configuration.html.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<configparser.ConfigParser at 0x781748117f40>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*2.3. Verificando que el archivo se haya creado*"
+      ],
+      "metadata": {
+        "id": "G5e9JoJVzolK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os"
+      ],
+      "metadata": {
+        "id": "yOzmGxew1oCG"
+      },
+      "execution_count": 131,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(os.path.exists(os.path.expanduser('~/.pybliometrics/config.ini')))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x1gOTZfV3YQd",
+        "outputId": "b62cee81-a1c0-4d3f-de7e-7836848a85ed"
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\large\\text{Configuración de archivos}$\n",
+        "\n",
+        "$\\small\\text{1. Crear el archivo de configuración sin parámetros}$\n",
+        "\n",
+        "*from pybliometrics.scopus.utils import create_config*\n",
+        "\n",
+        "$\\small\\text{# Creando el archivo de configuración}$\n",
+        "\n",
+        "*create_config()*\n",
+        "\n",
+        "$\\small\\text{2. Verificar que se ha creado correctamente el archivo}$\n",
+        "\n",
+        "*import os*\n",
+        "\n",
+        "*print(os.path.exists(os.path.expanduser('~/.pybliometrics/config.ini')))*\n",
+        "\n",
+        "$\\small\\text{Si la respuesta fuera 'False', significa que falta el archivo}$\n",
+        "\n",
+        "$\\small\\text{Esto es, por alguna razón 'create_config()',  no crea el archivo. Entonces, se puede crear el archivo de forma manual}$\n",
+        "\n",
+        "$\\small\\text{3. Creando el directorio '.pybliometrics' si aún no existe}$\n",
+        "\n",
+        "*import os*\n",
+        "\n",
+        "*os.makedirs(os.path.expanduser('~/.pybliometrics/'), exist_ok=True)*\n",
+        "\n",
+        "$\\small\\text{4. Creando el archivo 'config.ini' en ese directorio con el siguiente contenido básico}$\n",
+        "\n",
+        "$\\small\\text{config_text = \"\"\"}$\n",
+        "\n",
+        "$\\small\\text{[Authentication]}$\n",
+        "\n",
+        "$\\small\\text{APIKey = colocar_tu_clave_api_de_scopus}$\n",
+        "\n",
+        "$\\small\\text{\"\"\"}$\n",
+        "\n",
+        "$\\small\\text{with open(os.path.expanduser('~/.pybliometrics/config.ini'), 'w') as config_file:}$\n",
+        "\n",
+        "$\\small\\text{    config_file.write(config_text)}$"
+      ],
+      "metadata": {
+        "id": "saRSIXiC5n8l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "os.makedirs(os.path.expanduser('~/.pybliometrics/'), exist_ok=True)\n"
+      ],
+      "metadata": {
+        "id": "sE1EST4o3mQS"
+      },
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "config_text = \"\"\"\n",
+        "[Authentication]\n",
+        "APIKey = dd6486890bf7c90d1cc030d3607d22c3\n",
+        "\"\"\"\n",
+        "\n",
+        "with open(os.path.expanduser('~/.pybliometrics/config.ini'), 'w') as config_file:\n",
+        "    config_file.write(config_text)\n"
+      ],
+      "metadata": {
+        "id": "FOhHi9Gd3l_F"
+      },
+      "execution_count": 134,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\small\\text{PALABRA PARA LA BÚSQUEDA}$\n",
+        "\n",
+        "*TITLE-ABS-KEY(((\"deep\") AND (\"learning\")) AND ((\"biomedical) AND (“images\")) AND ((\"neural\") AND (\"networks\")) AND (\"algorithms\"))*"
+      ],
+      "metadata": {
+        "id": "gL6bMGzGxnzc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pybliometrics.scopus import ScopusSearch"
+      ],
+      "metadata": {
+        "id": "3_BGA3t0DV6q"
+      },
+      "execution_count": 135,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Configurando la API directamente utilizando las palabras claves\n",
+        "query = 'TITLE-ABS-KEY(((\"deep\") AND (\"learning\")) AND ((\"biomedical) AND (“images\")) AND ((\"neural\") AND (\"networks\")) AND (\"algorithms\"))'"
+      ],
+      "metadata": {
+        "id": "nS-yPU6xp_yk"
+      },
+      "execution_count": 136,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# s = ScopusSearch(query)"
+      ],
+      "metadata": {
+        "id": "4Ak-S2ZI0LqL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\large\\textit{3. Realizando las consultas}$"
+      ],
+      "metadata": {
+        "id": "opb0BAg-uyCq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*3.1. Desde un archivo del computador*"
+      ],
+      "metadata": {
+        "id": "TlSe1r9NLrNG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Importando temporalmente el archivo desde el computador a Colab\n",
-        "from google.colab import files\n",
+        "#from google.colab import files\n",
         "\n",
         "# Abriendo un diálogo para subir archivos desde tu computadora\n",
-        "uploaded = files.upload()\n"
+        "#uploaded = files.upload()\n"
       ],
       "metadata": {
         "colab": {
@@ -34,9 +347,9 @@
           "height": 74
         },
         "id": "gnZN5saq5dNj",
-        "outputId": "20316dfc-4c41-4291-e539-fcf7903b9af0"
+        "outputId": "78571770-e6d2-4a03-dd57-e00479ee3fe1"
       },
-      "execution_count": null,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "display_data",
@@ -46,9 +359,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-3c6e9e59-569d-4c56-b997-0a4f9e6df490\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-4af10b47-42de-442d-92ac-239ff4b2206d\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-3c6e9e59-569d-4c56-b997-0a4f9e6df490\">\n",
+              "     <output id=\"result-4af10b47-42de-442d-92ac-239ff4b2206d\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -236,10 +549,31 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving scopus.csv to scopus.csv\n"
+            "Saving scopus.csv to scopus (2).csv\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*3.2. Desde un archivo CSV alojado en GitHub"
+      ],
+      "metadata": {
+        "id": "nrXWr23RL9L_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importando el archivo CSV desde GitHub\n",
+        "url = 'https://raw.githubusercontent.com/EHN8829/DUPD_PARCIAL/main/scopus.csv'"
+      ],
+      "metadata": {
+        "id": "dUnzTi13KlWC"
+      },
+      "execution_count": 150,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -252,7 +586,7 @@
       "metadata": {
         "id": "lOry2bnw86Rv"
       },
-      "execution_count": null,
+      "execution_count": 151,
       "outputs": []
     },
     {
@@ -264,7 +598,7 @@
       "metadata": {
         "id": "7I1Uer_r9j9M"
       },
-      "execution_count": null,
+      "execution_count": 152,
       "outputs": []
     },
     {
@@ -276,7 +610,7 @@
       "metadata": {
         "id": "w3pd5Gc-94sX"
       },
-      "execution_count": null,
+      "execution_count": 153,
       "outputs": []
     },
     {
@@ -297,9 +631,9 @@
           "height": 681
         },
         "id": "64RTWqFy-Rbj",
-        "outputId": "5720b554-07eb-4907-819d-90ea24a33dc0"
+        "outputId": "d87822b0-4e8f-4856-9def-b852bb20f7dd"
       },
-      "execution_count": null,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "display_data",
@@ -331,9 +665,9 @@
           "height": 681
         },
         "id": "l8yLOOJI6LWc",
-        "outputId": "0a14d38b-4729-486f-d544-23c01c3d65b3"
+        "outputId": "3653f9aa-74d8-4003-c269-02c8125287fa"
       },
-      "execution_count": null,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "display_data",
@@ -359,9 +693,9 @@
         },
         "collapsed": true,
         "id": "Sei9vQ6sIvZ9",
-        "outputId": "be37f5c5-ded6-4b5a-8ab7-f1e74231c8c8"
+        "outputId": "2a965849-99db-417a-cf9f-0c7b0fc08223"
       },
-      "execution_count": null,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +706,7 @@
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (from missingno) (3.7.1)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from missingno) (1.13.1)\n",
             "Requirement already satisfied: seaborn in /usr/local/lib/python3.10/dist-packages (from missingno) (0.13.1)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->missingno) (1.2.1)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->missingno) (1.3.0)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib->missingno) (0.12.1)\n",
             "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->missingno) (4.53.1)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->missingno) (1.4.5)\n",
@@ -398,16 +732,19 @@
       "metadata": {
         "id": "dqaI6JgoI0_j"
       },
-      "execution_count": null,
+      "execution_count": 157,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Cargando nuevamente (temporalmente) el archivo a un DataFrame 'df'\n",
-        "## from google.colab import files\n",
-        "## uploaded = files.upload()\n",
-        "# Nota: se omitió estos pasos, porque el archivo ya fue importado al inicio del programa"
+        "$\\small\\text{Cargando nuevamente (temporalmente) el archivo a un DataFrame 'df'}$\n",
+        "\n",
+        "*from google.colab import files*\n",
+        "\n",
+        "*uploaded = files.upload()*\n",
+        "\n",
+        "$\\small\\textit{Nota: Se omitió estos pasos, porque el archivo ya fue importado al inicio del programa}$"
       ],
       "metadata": {
         "id": "ROULITpVX2hQ"
@@ -418,13 +755,12 @@
       "source": [
         "# Cargando nuevamente (temporalmente) el archivo a un DataFrame 'df'\n",
         "# from google.colab import files\n",
-        "# uploaded = files.upload()\n",
-        "# Nota: se omitió estos pasos, porque el archivo ya fue importado al inicio del programa"
+        "# uploaded = files.upload()"
       ],
       "metadata": {
         "id": "_BknDpAqXfnR"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -436,7 +772,7 @@
       "metadata": {
         "id": "slG-YkQTJGp7"
       },
-      "execution_count": null,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -452,9 +788,9 @@
           "height": 758
         },
         "id": "aIAQV0e0KXQz",
-        "outputId": "c1d49178-8ac1-4ae6-9bb0-5bca6b105fb4"
+        "outputId": "c8680957-e416-4514-ec4c-86f31a675afa"
       },
-      "execution_count": null,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "display_data",
@@ -481,9 +817,9 @@
           "height": 771
         },
         "id": "mcaVhSwOKgYT",
-        "outputId": "bdae908c-0e80-4e21-9b09-05391466c355"
+        "outputId": "12ce66fd-5b43-4954-f127-57152f6488f6"
       },
-      "execution_count": null,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "display_data",
@@ -510,9 +846,9 @@
           "height": 976
         },
         "id": "0HbAbCDB6LL1",
-        "outputId": "a508030e-f08d-40ec-aafb-a6102ad0b116"
+        "outputId": "2978900a-d1eb-4680-8541-005a30b1f6c0"
       },
-      "execution_count": null,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "display_data",
